--- a/Docker/Docker DB Postgres/docker-compose.yaml
+++ b/Docker/Docker DB Postgres/docker-compose.yaml
@@ -1,22 +1,44 @@
-version: '3'
+version: '3.9'
 
 services:
   postgres:
-    image: postgres:13
+    image: postgres:13 #postgres:latest
+    container_name: postgres_container
     environment:
       POSTGRES_USER: oleksii
       POSTGRES_PASSWORD: oleksii
       POSTGRES_DB: postgres
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
-      - "5434:5432"
+      - "5430:5432"
     volumes:
-      - postgres-db-volume:/var/lib/postgresql/data
-    #healthcheck:
-    #  test: ["CMD", "pg_isready", "-U", "oleksii"]
-    #  interval: 5s
-    #  retries: 5
-    restart: always
+      - postgres-db-volume:/var/lib/postgresql/data/pgdata
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
+    command: >
+      postgres -c max_connections=1000
+               -c shared_buffers=256MB
+               -c effective_cache_size=768MB
+               -c maintenance_work_mem=64MB
+               -c checkpoint_completion_target=0.7
+               -c wal_buffers=16MB
+               -c default_statistics_target=100
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres_user -d postgres_db" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    restart: always  #unless-stopped
+    tty: true
+    stdin_open: true
 
 volumes:
   postgres-db-volume:
+    driver: local
  
